# hsgcrypt

./: .gitignore  README  gcrypt.cabal
cbits/: help.c  help.h
examples/: encode.hs  simple.hs
src/: GCrypt.hs
src/GCrypt/: AsymmetricCrypto.hs  Base.chs  Common.hs  MPI.hs  Util.hs
src/GCrypt/AsymmetricCrypto/: Crypto.hs  Data.hs  Handles.hs  IO.hs  Keys.hs  Other.hs
src/GCrypt/Generalities/Error/: Strings.hs
src/GCrypt/MPI/: Basic.hs  Bits.hs  Calc.hs  Comp.hs  Data.hs  Format.hs  Misc.hs
src/GPG/: Error.chs
