Name: gcrypt
Synopsis: libgcrypt bindings for Haskell
Description: libgcrypt bindings for Haskell
Version: 0.0.1
License: LGPL
License-File: LICENSE
Author: John Van Enk <vanenkj@gmail.com>
Maintainer: John Van Enk <vanenkj@gmail.com>
Stability: experimental
Category: Cryptography
Cabal-Version: >= 1.6
Build-Type: Simple

Extra-Source-Files:
    cbits/help.h
    cbits/help.c

Library
    Build-Depends: base >= 4 && < 5

    Extra-Libraries: gcrypt

    Exposed-Modules:
        GCrypt.Base
        GCrypt.AsymmetricCrypto
        GPG.Error

    ghc-options:        -Wall -threaded
    cc-options:         -Wall
    hs-source-dirs:     src
    include-dirs:       cbits/

    includes:           cbits/help.h
    c-sources:          cbits/help.c
