Name: gcrypt
Synopsis: libgcrypt bindings for Haskell
Description: libgcrypt bindings for Haskell
Version: 0.0.1
License: LGPL
License-File: LICENSE
Author: John Van Enk <vanenkj@gmail.com>
Maintainer: John Van Enk <vanenkj@gmail.com>
Stability: experimental
Category: Cryptography
Cabal-Version: >= 1.6
Build-Type: Simple
Package-URL: git://github.com/sw17ch/hsgcrypt.git 

Extra-Source-Files:
    cbits/help.h
    cbits/help.c

Library
    Build-Depends: base >= 4 && < 5,
                   bytestring >= 0.9.1.4 && < 0.9.2

    Extra-Libraries: gcrypt

    Other-Modules:
        GCrypt.Common
        GCrypt.Base
        GCrypt.AsymmetricCrypto.IO
    Exposed-Modules:
        GCrypt.AsymmetricCrypto
        GCrypt.AsymmetricCrypto.Keys
        GCrypt.AsymmetricCrypto.Handles
        GCrypt.AsymmetricCrypto.Other
        GCrypt.AsymmetricCrypto.Crypto
        GCrypt.AsymmetricCrypto.Data
        GCrypt.MPI
        GCrypt.MPI.Comp
        GCrypt.MPI.Bits
        GCrypt.MPI.Calc
        GCrypt.MPI.Basic
        GCrypt.MPI.Format
        GCrypt.MPI.Misc
        GCrypt.MPI.Data

        GPG.Error

    ghc-options:        -Wall -threaded
    cc-options:         -Wall
    hs-source-dirs:     src
    include-dirs:       cbits/

    includes:           cbits/help.h
    c-sources:          cbits/help.c
